// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IconFill props exists 1`] = `
<
  style={
    Array [
      Object {
        "color": "black",
        "fontFamily": "antfill",
        "fontSize": 24,
        "fontStyle": "normal",
        "fontWeight": "normal",
      },
      undefined,
    ]
  }
>
  
</>
`;

exports[`IconFill should create Icon element. 1`] = `
<
  style={
    Array [
      Object {
        "color": "black",
        "fontFamily": "antfill",
        "fontSize": 14,
        "fontStyle": "normal",
        "fontWeight": "normal",
      },
      undefined,
    ]
  }
>
  
</>
`;

exports[`IconFill should create fillGlyphMap 1`] = `
Object {
  "account-book": 57345,
  "alert": 57346,
  "alipay-circle": 57347,
  "alipay-square": 57348,
  "aliwangwang": 57349,
  "amazon-circle": 57350,
  "amazon-square": 57351,
  "android": 57352,
  "api": 57353,
  "apple": 57354,
  "appstore": 57355,
  "audio": 57356,
  "backward": 57357,
  "bank": 57358,
  "behance-circle": 57359,
  "behance-square": 57360,
  "bell": 57361,
  "book": 57362,
  "box-plot": 57363,
  "build": 57364,
  "bulb": 57365,
  "calculator": 57366,
  "calendar": 57367,
  "camera": 57368,
  "car": 57369,
  "caret-down": 57370,
  "caret-left": 57371,
  "caret-right": 57372,
  "caret-up": 57373,
  "carry-out": 57374,
  "check-circle": 57375,
  "check-square": 57376,
  "chrome": 57377,
  "ci-circle": 57378,
  "clock-circle": 57379,
  "close-circle": 57380,
  "close-square": 57381,
  "cloud": 57382,
  "code": 57385,
  "code-sandbox-circle": 57383,
  "code-sandbox-square": 57384,
  "codepen-circle": 57386,
  "codepen-square": 57387,
  "compass": 57388,
  "contacts": 57389,
  "container": 57390,
  "control": 57391,
  "copy": 57392,
  "copyright-circle": 57393,
  "credit-card": 57394,
  "crown": 57395,
  "customer-service": 57396,
  "dashboard": 57397,
  "database": 57398,
  "delete": 57399,
  "diff": 57400,
  "dingtalk-circle": 57401,
  "dingtalk-square": 57402,
  "dislike": 57403,
  "dollar-circle": 57404,
  "down-circle": 57405,
  "down-square": 57406,
  "dribbble-circle": 57407,
  "dribbble-square": 57408,
  "dropbox-circle": 57409,
  "dropbox-square": 57410,
  "edit": 57411,
  "environment": 57412,
  "euro-circle": 57413,
  "exclamation-circle": 57414,
  "experiment": 57415,
  "eye": 57416,
  "facebook": 57417,
  "fast-backward": 57418,
  "fast-forward": 57419,
  "file": 57431,
  "file-add": 57420,
  "file-excel": 57421,
  "file-exclamation": 57422,
  "file-image": 57423,
  "file-markdown": 57424,
  "file-pdf": 57425,
  "file-ppt": 57426,
  "file-text": 57427,
  "file-unknown": 57428,
  "file-word": 57429,
  "file-zip": 57430,
  "filter": 57432,
  "fire": 57433,
  "flag": 57434,
  "folder": 57437,
  "folder-add": 57435,
  "folder-open": 57436,
  "forward": 57438,
  "frown": 57439,
  "fund": 57440,
  "funnel-plot": 57441,
  "gift": 57442,
  "github": 57443,
  "gitlab": 57444,
  "golden": 57445,
  "google-circle": 57446,
  "google-plus-circle": 57447,
  "google-plus-square": 57448,
  "google-square": 57449,
  "hdd": 57450,
  "heart": 57451,
  "highlight": 57452,
  "home": 57453,
  "hourglass": 57454,
  "html5": 57455,
  "idcard": 57456,
  "ie-circle": 57457,
  "ie-square": 57458,
  "info-circle": 57459,
  "instagram": 57460,
  "insurance": 57461,
  "interation": 57462,
  "layout": 57463,
  "left-circle": 57464,
  "left-square": 57465,
  "like": 57466,
  "linkedin": 57467,
  "lock": 57468,
  "mail": 57469,
  "medicine-box": 57470,
  "medium-circle": 57471,
  "medium-square": 57472,
  "meh": 57473,
  "message": 57474,
  "minus-circle": 57475,
  "minus-square": 57476,
  "mobile": 57477,
  "money-collect": 57478,
  "notification": 57479,
  "pause-circle": 57480,
  "pay-circle": 57481,
  "phone": 57482,
  "picture": 57483,
  "pie-chart": 57484,
  "play-circle": 57485,
  "play-square": 57486,
  "plus-circle": 57487,
  "plus-square": 57488,
  "pound-circle": 57489,
  "printer": 57490,
  "profile": 57491,
  "project": 57492,
  "property-safety": 57493,
  "pushpin": 57494,
  "qq-circle": 57495,
  "qq-square": 57496,
  "question-circle": 57497,
  "read": 57498,
  "reconciliation": 57499,
  "red-envelope": 57500,
  "reddit-circle": 57501,
  "reddit-square": 57502,
  "rest": 57503,
  "right-circle": 57504,
  "right-square": 57505,
  "rocket": 57506,
  "safety-certificate": 57507,
  "save": 57508,
  "schedule": 57509,
  "security-scan": 57510,
  "setting": 57511,
  "shop": 57512,
  "shopping": 57513,
  "sketch-circle": 57514,
  "sketch-square": 57515,
  "skin": 57516,
  "skype": 57517,
  "slack-circle": 57518,
  "slack-square": 57519,
  "sliders": 57520,
  "smile": 57521,
  "snippets": 57522,
  "sound": 57523,
  "star": 57524,
  "step-backward": 57525,
  "step-forward": 57526,
  "stop": 57527,
  "switcher": 57528,
  "tablet": 57529,
  "tag": 57530,
  "tags": 57531,
  "taobao-circle": 57532,
  "taobao-square": 57533,
  "thunderbolt": 57534,
  "tool": 57535,
  "trademark-circle": 57536,
  "trophy": 57537,
  "twitter-circle": 57538,
  "twitter-square": 57539,
  "unlock": 57540,
  "up-circle": 57541,
  "up-square": 57542,
  "usb": 57543,
  "video-camera": 57544,
  "wallet": 57545,
  "warning": 57546,
  "wechat": 57547,
  "weibo-circle": 57548,
  "weibo-square": 57549,
  "windows": 57550,
  "yahoo": 57551,
  "youtube": 57552,
  "yuque": 57553,
  "zhihu-circle": 57554,
  "zhihu-square": 57555,
}
`;
